# OptimusImageServer

./: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  doppler.yaml  pyproject.toml
OptimusMediaServer/: app.py  utils.py
optimus_portfolio_api/: app.py  bookstack.py  github.py  notion.py  utils.py
optimus_portfolio_api/mongo/: MongoRouter.py
