
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jayden", email = "jpylesbusiness@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "spotipy>=2.23.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
